<resources>
    <string name="app_name">ServicesJava</string>
    <string name="start_schedule_service">Start_schedule_service</string>
    <string name="start_service">start_service</string>
    <string name="stop_service">stop_service</string>
    <string name="start_intent_service">start_intent_service</string>
    <string name="unbind_service">unbind_service</string>
    <string name="bind_service">bind_service</string>
</resources>
